# sf6-ranking

./: README.md  pyproject.toml  pyrightconfig.json
src/sf6_ranking/: __init__.py  capcom_login.py  client.py  constants.py  ranking.py  types.py
src/sf6_ranking/types/: character.py
