[project]
name = "sf6-ranking"
version = "0.0.1"
description = ""
authors = [
    {name = "UnknownMemory", email = ""},
]
dependencies = [
    "httpx[http2]>=0.26.0",
    "selenium>=4.22.0",
    "pydantic>=2.7.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.2.1",
]
type = [
    "pyright>=1.1.350",
]

[tool.pdm.scripts]
lint = "ruff check ."

[tool.ruff]
line-length = 100

